<?xml version="1.0"?>
<package>
  <name>dg_console</name>
  <version>0.1.0</version>
  <description>The dg_console package</description>
  <maintainer email="H@example.com">H</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
